--- a/homepage.css
+++ b/homepage.css
@@ -1,39 +1,39 @@
 body {
     margin: 0;
     font-family: Arial, sans-serif;
-  }
+}
 
   /* Navigation bar styling */
-  .navbar {
+.navbar {
     background-color: #333;
     padding: 10px 0;
-  }
+}
 
   /* Navigation links container */
-  .navbar ul {
+.navbar ul {
     list-style: none; /* Remove bullets */
     margin: 0;
     padding: 0;
     display: flex; /* Make links appear adjacent */
     justify-content: center; /* Center align the links */
-  }
+}
 
   /* Individual navigation links */
-  .navbar li {
+.navbar li {
     margin: 0 15px; /* Add space between links */
-  }
+}
 
-  .navbar a {
+.navbar a {
     text-decoration: none;
     color: white;
     padding: 10px 20px;
     transition: background-color 0.3s, color 0.3s;
-  }
+}
 
-  .navbar a:hover {
+.navbar a:hover {
     background-color: #575757;
     color: #fff;
-  }
+}
 
   /* Reset some default styles */
 * {
@@ -128,3 +128,8 @@ h2 {
 	text-decoration: underline;
 }
 
+.logo {
+	margin: .5em 0 0 2em;
+	height: 100px;
+	width: 100px;
+}
