--- a/homepage.css
+++ b/homepage.css
@@ -147,3 +147,13 @@ h2 {
 	width: auto;
 	height: auto;
 }
+
+.bus-routes-image {
+	max-height: 400px;
+	width: auto;
+	height: auto;
+}
+
+.update-text {
+	text-align: center
+}
